infrastructure/service.tf
resource "aws_ecs_service" "app" {
  name            = "${var.project_name}-${var.app_env}-service"
  cluster         = aws_ecs_cluster.this.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count   = var.desired_count
  launch_type     = "FARGATE"

  network_configuration {
    subnets          = [for s in aws_subnet.public : s.id]
    security_groups  = [aws_security_group.service_sg.id]
    assign_public_ip = true
  }

  deployment_minimum_healthy_percent = 0
  deployment_maximum_percent         = 200

  lifecycle {
    ignore_changes = [task_definition] # lets CI update the service to a new task def revision without TF drift
  }

  depends_on = [aws_cloudwatch_log_group.ecs_app]
}
